[package]
name = "count_down"
version = "0.2.0"
authors = ["Amit Dev", "Drazen Dotlic"]
edition = "2018"

[lib]
name = "count_down"
path = "src/lib.rs"

[dependencies]
itertools="0.8.2"
rayon = "1.1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "count_down_bench"
harness = false